MinIO integration starting in this commit.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,25 @@
 version: '2'
 services:
   backend:
-    build: ./src/ 
+    build: ./src/
     tty: true
     volumes:
       - './src/:/usr/src/app/'
     ports:
       - '8080:8000'
+    environment:
+      MINIO_ENDPOINT: s3
+      MINIO_ACCESS_KEY: minio_access_key
+      MINIO_SECRET_KEY: minio_secret_key
+      MINIO_PORT: 9000
+  s3:
+    image: minio/minio
+    tty: true
+    ports:
+      - "9000:9000"
+    volumes:
+      - ./build/minio/data:/data
+    environment:
+      MINIO_ACCESS_KEY: minio_access_key
+      MINIO_SECRET_KEY: minio_secret_key
+    command: server --address 0.0.0.0:9000 /data
