--- a/src/package.json
+++ b/src/package.json
@@ -3,6 +3,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "express": "^4.17.2",
     "fluent-ffmpeg": "^2.1.2",
-    "hls-server": "^1.5.0"
+    "hls-server": "^1.5.0",
+    "minio": "^7.0.26"
   }
 }
