--- a/src/package.json
+++ b/src/package.json
@@ -4,6 +4,7 @@
     "express": "^4.17.2",
     "fluent-ffmpeg": "^2.1.2",
     "hls-server": "^1.5.0",
-    "minio": "^7.0.26"
+    "minio": "^7.0.26",
+    "mongoose": "^6.1.7"
   }
 }
