--- a/src/package.json
+++ b/src/package.json
@@ -10,5 +10,10 @@
     "jsonwebtoken": "^8.5.1",
     "minio": "^7.0.26",
     "mongoose": "^6.1.7"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.0"
   }
 }
