--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "brcypt": "^1.0.1",
+    "content-filter": "^1.1.2",
     "express": "^4.17.2",
     "fluent-ffmpeg": "^2.1.2",
     "hls-server": "^1.5.0",
