--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.2",
     "fluent-ffmpeg": "^2.1.2",
     "hls-server": "^1.5.0",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "minio": "^7.0.26",
     "mongoose": "^6.1.7"
