--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
     "brcypt": "^1.0.1",
     "content-filter": "^1.1.2",
     "express": "^4.17.2",
+    "express-async-handler": "^1.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "hls-server": "^1.5.0",
     "joi": "^17.6.0",
